# aoc2022.hs

./: .gitignore  aoc2022-hs.cabal  aoc2022.cabal  stack.yaml
app/: Main.hs
src/: AoC2022.hs  Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs
tests/: Tests.hs
