cabal-version:      2.4
name:               aoc2022
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: Advent of Code 2022, in Haskell

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Jacek Bilski
maintainer:         jacek@bilski.tech

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

library
    exposed-modules:  AoC2022

    -- Modules included in this library but not exported.
    other-modules: Day01, Day02, Day03, Day04, Day05, Day06, Day07

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base>=4, flow, split, containers
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options: -Wall

test-suite test-aoc2022
    type:               exitcode-stdio-1.0
    main-is:            Driver.hs
    other-modules:      Tests
    build-depends:
        base>=4
       ,tasty >= 1.4
       ,tasty-hunit
       ,tasty-discover
       ,aoc2022
    hs-source-dirs:     tests
    default-language:   Haskell2010
    ghc-options: -Wall
